--- a/src/app/new-insert/new-specs/new-specs.component.html
+++ b/src/app/new-insert/new-specs/new-specs.component.html
@@ -31,7 +31,7 @@
 
 <p *ngFor="let row of QA">{{row.question}}</p> -->
 
-
+<!-- <p>{{NewInsert.length}}</p> -->
 <div class="content">
     <h1>Voeg opties toe</h1>
 
