--- a/src/app/new-category/new-category.component.html
+++ b/src/app/new-category/new-category.component.html
@@ -11,7 +11,7 @@
         </mat-form-field>
 
     </div>
-    <button (click)="onSubmit()" class="button-save-category" mat-raised-button disabled="{{exist}}">Opslaan </button>
+    <button (click)="clickSave()" class="button-save-category" mat-raised-button disabled="{{exist}}">Opslaan </button>
 
 </div>
 
