--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -49,10 +49,10 @@
       <p>Profile</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose a profile</mat-label>
-        <mat-select [formControl]="profileNonEmptyControl" required (selectionChange)="selectProfile()">
+        <mat-select [formControl]="profileNonEmptyControl" required [(ngModel)]="chosenProfile">
           <mat-option>None</mat-option>
-          <mat-option *ngFor="let profile of profiles" [value]="profile">
-          {{profile}}
+          <mat-option *ngFor="let profile of profiles" [value]="profile.material_name">
+          {{profile.material_name}}
           </mat-option>
         <!-- </mat-select> -->
 
@@ -133,3 +133,5 @@
 
 </div>
 </div>
+
+<img id="image" src="">
